tests/parsing/invalid_call_arg_count/stderr.golden
error: function 'log2' takes 1 arguments, but 0 were provided
bus.fbd +2:21
   |
 2 |   s status; width = log2()
   |                     ^^^^
